Changed to ignore invalid META charset for certain unicode charsets, bug 56626, r=ftang, sr=erik.